# booky

./: .flaskenv  .gitignore  Procfile  README.md  bookmarkie.db  initialize_db.py  pyproject.toml  requirements.txt  vscode-requirements.txt
bookmarkie/: __init__.py  bookmarkie.db  bookmarks_parser.py  get_favicon.py  models.py  todo.md
bookmarkie/static/scripts/: content.js
bookmarkie/static/styles/: BSmod.css  content.css  sidebar.css
bookmarkie/templates/: base.html  display_directory.html  display_folder.html  index.html  index_empty.html  modal_create.html  modal_delete.html  modal_edit.html  modal_upload.html
test/: __init__.py  testcase.py
