[tool.poetry]
name = "booky"
version = "0.1.0"
description = ""
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.0"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
favicon = "^0.7.0"
Pillow = "^8.1.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
